# gazebo_spinning_velodyne

./: CMakeLists.txt  README.md  cube_sim.world  setup.bash  setup.sh  test.world  velodyne.world
models/imu_6_axis/: model.config  model.sdf
models/velodyne_hdl32/: model.config  model.sdf
ros_tool/: sensors_link.launch  visual.rviz
src/: lidar_plugin.cc  my_gazebo_ros_laser.cc  my_gazebo_ros_laser.h  point_types.h  point_types.hpp  velodyne_plugin.cc
